# deny-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
deny_sh/: __init__.py  core.py
tests/: test_core.py
