[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deny-sh"
version = "1.0.0"
description = "Deniable encryption — AES-256 with plausible deniability via control files"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.8"
authors = [{ name = "deny.sh", email = "hello@deny.sh" }]
keywords = ["encryption", "deniable", "aes", "cryptography", "plausible-deniability"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = ["pycryptodome>=3.15"]

[project.urls]
Homepage = "https://deny.sh"
Documentation = "https://deny.sh/docs"
Repository = "https://github.com/deny-sh-crypto/deny-python"
Issues = "https://github.com/deny-sh-crypto/deny-python/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["deny_sh*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
